# rust-projects

add/add-one/: Cargo.toml
add/adder/: Cargo.toml
blog_post_oop/: Cargo.toml
blog_post_oop/src/: lib.rs  main.rs
cacher/: Cargo.toml
cacher/src/: main.rs
christmas/: Cargo.toml
christmas/src/: main.rs
collection_statistics/: Cargo.toml
collection_statistics/src/: main.rs
fib/: Cargo.toml
fib/src/: main.rs
game-of-life/: Cargo.toml  LICENSE_MIT
game-of-life/src/: lib.rs
game-of-life/tests/: web.rs
game-of-life/www/: index.js  package-lock.json
generic_largest/: Cargo.toml
generic_largest/src/: main.rs
git-checkout-interactive/: Cargo.toml
git-checkout-interactive/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello-wasm/: Cargo.toml
hello-wasm/src/: lib.rs
hello_cargo/: Cargo.toml
hello_macro/: Cargo.toml
hello_macro/hello_macro_derive/: Cargo.toml
lifetimes/: Cargo.toml
lifetimes/src/: main.rs
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
pancakes/: Cargo.toml
patience/: Cargo.toml
patience/src/: main.rs
pig-latin/: Cargo.toml
pig-latin/src/: main.rs
super-tiny-compiler-port/: Cargo.toml
super-tiny-compiler-port/src/: lib.rs  models.rs  parser.rs  tokenizer.rs
super-tiny-compiler-port/tests/: parser_test.rs  tokenizer_test.rs
temperatures/: Cargo.toml
temperatures/src/: main.rs
text-interface/: Cargo.toml
text-interface/src/: main.rs
web_server/: 500.html  Cargo.toml
web_server/src/: lib.rs  main.rs
web_server/tests/: integration_test.rs
